@@ -27,6 +27,9 @@ The following changes may create regressions for some external modules, but were
   cross platform compatibility. On linux the exit(-1) was caught as 255, it may be now exit(1) so will be caught as 1.
 * the parameter $filter of method fetchAll does not accept array of SQL but must be a string of an Universal Search Filter syntax.
 * Use of dol_eval with parameter $returnvalue=0 is deprecated.
+* The signature for all ->delete() method has been modified to match the modulebuilder template (so first paramis now always $user), except
+  the delete for thirdparty (still accept the id of thirdparty to delete as first parameter). Will probably be modified into another version.
+
 
 
 ***** ChangeLog for 19.0.1 compared to 19.0.0 *****
